# LobsterPy

./: .buildinfo  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  codecov.yml  genindex.html  index.html  objects.inv  py-modindex.html  pylintrc  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle  index.doctree
.doctrees/about/: changelog.doctree  license.doctree
.doctrees/dev/: contributing.doctree  dev_installation.doctree
.doctrees/fundamentals/: index.doctree
.doctrees/installation/: index.doctree
.doctrees/reference/: cli.doctree  index.doctree  lobsterpy.cohp.analyze.Analysis.doctree  lobsterpy.cohp.analyze.POSCAR_WARNING.doctree  lobsterpy.cohp.analyze.doctree  lobsterpy.cohp.describe.Description.doctree  lobsterpy.cohp.describe.doctree  lobsterpy.cohp.doctree  lobsterpy.featurize.batch.BatchCoxxFingerprint.doctree  lobsterpy.featurize.batch.BatchDosFeaturizer.doctree  lobsterpy.featurize.batch.BatchIcoxxlistFeaturizer.doctree  lobsterpy.featurize.batch.BatchStructureGraphs.doctree  lobsterpy.featurize.batch.BatchSummaryFeaturizer.doctree  lobsterpy.featurize.batch.doctree  lobsterpy.featurize.core.CoxxFingerprint.doctree  lobsterpy.featurize.core.DosFingerprint.doctree  lobsterpy.featurize.core.FeaturizeCOXX.doctree  lobsterpy.featurize.core.FeaturizeCharges.doctree  lobsterpy.featurize.core.FeaturizeDoscar.doctree  lobsterpy.featurize.core.FeaturizeIcoxxlist.doctree  lobsterpy.featurize.core.FeaturizeLobsterpy.doctree  lobsterpy.featurize.core.doctree  lobsterpy.featurize.doctree  lobsterpy.featurize.utils.CoxxFingerprint.doctree  lobsterpy.featurize.utils.POSCAR_WARNING.doctree  lobsterpy.featurize.utils.doctree  lobsterpy.featurize.utils.get_electronegativities.doctree  lobsterpy.featurize.utils.get_file_paths.doctree  lobsterpy.featurize.utils.get_reduced_mass.doctree  lobsterpy.featurize.utils.get_structure_path.doctree  lobsterpy.featurize.utils.sort_dict_by_value.doctree  lobsterpy.plotting.BWDFPlotter.doctree  lobsterpy.plotting.IcohpDistancePlotter.doctree  lobsterpy.plotting.InteractiveCohpPlotter.doctree  lobsterpy.plotting.PlainCohpPlotter.doctree  lobsterpy.plotting.PlainDosPlotter.doctree  lobsterpy.plotting.TYPE_CHECKING.doctree  lobsterpy.plotting.base_style.doctree  lobsterpy.plotting.doctree  lobsterpy.plotting.get_style_list.doctree  (+11 more)
.doctrees/tutorial/: atomateauto.doctree  computingtimes.doctree  index.doctree  tutorial.doctree
.github/: release.yml
.github/scripts/: average_test_durations.py
.github/workflows/: codeql-analysis.yml  docs.yml  draft-pdf.yml  precommit.yml  pylint.yml  python-package.yml  python-publish.yml
App/: app.py  helper.py
App/tests/: helpers_for_tests.py  test_cell_building.py  test_edge_data.py  test_matrix_and_axes.py
_downloads/bdff33f4f22a5d2dc65348c72950861a/: CdF2_orb.html
_modules/: index.html
_modules/lobsterpy/: plotting.html
_sources/about/: license.md
_sources/dev/: dev_installation.md
_sources/fundamentals/: index.ipynb
_sources/installation/: index.md
_sources/reference/: cli.rst  lobsterpy.cohp.analyze.Analysis.rst  lobsterpy.cohp.analyze.POSCAR_WARNING.rst  lobsterpy.cohp.analyze.rst  lobsterpy.cohp.describe.Description.rst  lobsterpy.cohp.describe.rst  lobsterpy.cohp.rst  lobsterpy.featurize.batch.BatchCoxxFingerprint.rst  lobsterpy.featurize.batch.BatchDosFeaturizer.rst  lobsterpy.featurize.batch.BatchIcoxxlistFeaturizer.rst  lobsterpy.featurize.batch.BatchStructureGraphs.rst  (+39 more)
_static/: custom.css
about/: changelog.html  license.html
dev/: contributing.html  dev_installation.html
docs/: CHANGELOG.rst  Lobsterpy_tutorial.rst  README.md  README.rst  changelog_link.rst  commandlineinterface.rst  computingtimes.rst  conf.py  index.md  index.rst  installation.rst  license_link.rst  lobsterpy.cohp.rst  lobsterpy.rst  readme_link.rst  requirements.txt  tutorials.rst
examples/: example_script_NaCl.py  example_script_NaCl_Structure_graph.py  example_script_NaCl_all.py  example_script_NaCl_orbitalwise.py
fundamentals/: index.html
installation/: index.html
lobsterpy/: __init__.py  cli.py
paper/: paper.bib  paper.md
reference/: cli.html  index.html  lobsterpy.cohp.analyze.Analysis.html  lobsterpy.cohp.analyze.POSCAR_WARNING.html  lobsterpy.cohp.analyze.html  lobsterpy.cohp.describe.Description.html  lobsterpy.cohp.describe.html  lobsterpy.cohp.html  lobsterpy.featurize.batch.BatchCoxxFingerprint.html  lobsterpy.featurize.batch.BatchDosFeaturizer.html  lobsterpy.featurize.batch.BatchIcoxxlistFeaturizer.html  lobsterpy.featurize.batch.BatchStructureGraphs.html  lobsterpy.featurize.batch.BatchSummaryFeaturizer.html  lobsterpy.featurize.batch.html  lobsterpy.featurize.core.CoxxFingerprint.html  lobsterpy.featurize.core.DosFingerprint.html  lobsterpy.featurize.core.FeaturizeCOXX.html  lobsterpy.featurize.core.FeaturizeCharges.html  lobsterpy.featurize.core.FeaturizeDoscar.html  lobsterpy.featurize.core.FeaturizeIcoxxlist.html  lobsterpy.featurize.core.FeaturizeLobsterpy.html  lobsterpy.featurize.core.html  lobsterpy.featurize.html  lobsterpy.featurize.utils.CoxxFingerprint.html  lobsterpy.featurize.utils.POSCAR_WARNING.html  lobsterpy.featurize.utils.get_electronegativities.html  lobsterpy.featurize.utils.get_file_paths.html  lobsterpy.featurize.utils.get_reduced_mass.html  lobsterpy.featurize.utils.get_structure_path.html  lobsterpy.featurize.utils.html  lobsterpy.featurize.utils.sort_dict_by_value.html  lobsterpy.plotting.BWDFPlotter.html  lobsterpy.plotting.IcohpDistancePlotter.html  lobsterpy.plotting.InteractiveCohpPlotter.html  lobsterpy.plotting.PlainCohpPlotter.html  lobsterpy.plotting.PlainDosPlotter.html  lobsterpy.plotting.TYPE_CHECKING.html  lobsterpy.plotting.base_style.html  lobsterpy.plotting.get_style_list.html  lobsterpy.plotting.html  (+11 more)
tests/: conftest.py
tutorial/: atomateauto.html  computingtimes.html  index.html  tutorial.html
(+224 files in other folders)
